[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "asyncpgsa"
description = "sqlalchemy support for asyncpg"
readme = "README.md"
requires-python = ">=3.7"  # FIXME: Drop support for 3.7, it reached EOL
license = "Apache-2.0"
authors = [
  { name = "nhumrich", email = "nick.humrich@canopytax.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    # FIXME: Update versions to 3.8…3.12
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "asyncpg >=0.22.0",
    "sqlalchemy >=1.4",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/canopytax/asyncpgsa"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
    "/asyncpgsa/**/*.py",
]

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
python = "3.7"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "sqlalchemy >=1.4",
    "typing-extensions",
]
[tool.hatch.envs.default.scripts]
test = "pytest ./tests -s -vvv --log-level=DEBUG"
check = [
    "ruff format --check asyncpgsa docs tests",
    "ruff asyncpgsa docs tests",
]
lint = [
    "ruff format asyncpgsa docs tests",
    "ruff --fix asyncpgsa docs tests",
]

[tool.hatch.envs.test]
matrix-name-format = "{variable}{value}"
overrides.matrix.sqlalchemy.dependencies = [
    { value = "sqlalchemy ~=1.4", if = ["1.4"] },
    { value = "sqlalchemy ~=2.0", if = ["2.0"] },
]

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
sqlalchemy = ["1.4", "2.0"]

[tool.ruff.lint]
# For reference, see https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "I",  # `isort`
    # TODO: Consider adding other rules
]
